FIXED: Section padding was scaling down to soon on resize. Added secondary xl-phone breakpoint and reworked phone breakpoit. Updated the sections with new breakpoints and works. The incorrect padding was caushing the cards to not wrap correctly, causing them to take up less space vertically.

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -22,6 +22,13 @@ ORDER [When refactoring for responsiveness]: Base + typography > general layout 
 
 @mixin respond($breakpoint) {
   @if $breakpoint == phone {
+    @media only screen and (max-width: 26.5em) {
+      //425px
+      @content;
+    }
+  }
+
+  @if $breakpoint == xl-phone {
     @media only screen and (max-width: 36.5em) {
       //584px
       @content;
